--- a/app/src/main/res/layout/itemstyle.xml
+++ b/app/src/main/res/layout/itemstyle.xml
@@ -10,25 +10,28 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginBottom="10dp">
+        android:background="#ffffffff">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:text="Title"
-                android:id="@+id/item_title" />
+                android:id="@+id/item_title"
+                android:textColor="#ff000000"/>
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:text="Writer"
-                android:id="@+id/item_writer" />
+                android:id="@+id/item_writer"
+                android:textColor="#ff000000"/>
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:text="Date"
-                android:id="@+id/item_date" />
+                android:id="@+id/item_date"
+                android:textColor="#ff000000"/>
 
         </LinearLayout>
 
