--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,58 @@
 
         </RelativeLayout>
 
-        <View
+        <LinearLayout
             android:id="@+id/drawer"
             android:layout_width="200dp"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:layout_gravity="start"
-            android:background="#3F51B5" />
+            android:background="#3F51B5" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="2"
+                android:background="#ff000000">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="사진"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="이름"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+                <Button
+                    android:id="@+id/btn_menu_pdg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="PALDAL-GU"/>
+
+                <Button
+                    android:id="@+id/btn_menu_jag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="JANGAN-GU"/>
+
+
+            </LinearLayout>
+        </LinearLayout>
 
 
     </android.support.v4.widget.DrawerLayout>
