--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,17 +64,20 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_login"
         android:text="로그인"
+        android:textColor="#fffff0"
         android:layout_below="@+id/EText_pwd"
         android:layout_marginTop="20px"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"/>
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_join"
         android:text="회원가입"
+        android:textColor="#fffff0"
         android:layout_below="@+id/btn_login"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:background="#ff0c56a7"/>
 
 </RelativeLayout>
