--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,34 +11,6 @@
     android:gravity="center_vertical"
     tools:context=".MainActivity">
 
-    <RadioGroup
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="left"
-        android:layout_alignBottom="@+id/EText_id"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="50dp">
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/option1"
-            android:layout_marginRight="20px"
-            android:text="수강생"
-            android:checked="true"
-            />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/option2"
-            android:text="강사"
-            />
-
-    </RadioGroup>
-
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -68,7 +40,8 @@
         android:layout_below="@+id/EText_pwd"
         android:layout_marginTop="20px"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:background="#ff0c56a7"/>
 
     <Button
         android:layout_width="fill_parent"
