기본정보 입력창 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/listView"
-                    />
+                    android:dividerHeight="1dp"
+                    android:divider="#ff000000"/>
 
 
             </LinearLayout>
