--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.esc.esc.JoinActivity"
-    android:background="#0c56A7">
+    android:background="@mipmap/join_back">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,6 +22,7 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:text="나이"
+                android:textColor="#343049"
                 android:textSize="25dp"/>
 
             <EditText
@@ -34,6 +35,7 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:text="세"
+                android:textColor="#343049"
                 android:textSize="25dp"/>
                 />
         </LinearLayout>
@@ -46,6 +48,7 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:text="성별"
+                android:textColor="#343049"
                 android:textSize="25dp" />
 
             <RadioGroup
@@ -59,6 +62,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="남"
+                    android:textColor="#343049"
                     android:textSize="25dp"/>
 
                 <RadioButton
@@ -67,6 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:text="여"
+                    android:textColor="#343049"
                     android:textSize="25dp"/>
 
             </RadioGroup>
@@ -81,6 +86,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="키워드"
+                android:textColor="#343049"
                 android:textSize="25dp"/>
             <EditText
                 android:id="@+id/edit_keyword"
@@ -91,8 +97,9 @@
                 android:layout_width="50dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
+
                 android:text="추가"
-                android:background="#000000"
+                android:background="#ffc3d891"
                 android:textSize="15dp"/>
         </LinearLayout>
 
@@ -104,7 +111,7 @@
             android:layout_marginLeft="100dp"
             android:dividerHeight="0.1dp"
             android:divider="#ff000000"
-            android:background="#0c56A7"/>
+            android:background="#343049"/>
 
     </LinearLayout>
 
