--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -168,7 +168,8 @@
 
                 <LinearLayout
                     android:id="@+id/linearlayout_menu_profile"
-                    android:layout_width="200dp"
+                    android:layout_width="150dp"
+                    android:background="#0083cb"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center">
