--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,7 +142,8 @@
                     android:layout_height="match_parent"
                     android:id="@+id/listView"
                     android:dividerHeight="1dp"
-                    android:divider="#ff000000"/>
+                    android:divider="#ff000000"
+                    android:background="@mipmap/main_back"/>
 
 
             </LinearLayout>
